revert URL builder